init: add foulder img and change files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Nahimov Mikhail CV</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="container">
+                <ul class="menu">
+                    <li class="text-list"><a href="" class="nav-text">Contact information</a></li>
+                    <li class="text-list"><a href="" class="nav-text">About Me</a></li>
+                    <li class="text-list"><a href="" class="nav-text">Skills</a></li>
+                    <li class="text-list"><a href="" class="nav-text">Education</a></li>
+                    <li class="text-list"><a href="" class="nav-text">English</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
+    <main>
+        <h1 class="name">Pavel Nahimov</h1>
+        <img src="img/image-11.JPG" alt="foto" class="foto">
 
+        <div class="contact">
+            <h2 class="head-text">Contact information:</h2>
+            <ul>
+                <li>Phone: +7(921) 61-55-770</li>
+                <li>Telegram: @EdmonDantes3</li>
+                <li>Email: pmm1@inbox.ru </li>
+                <li><a href="https://github.com/EdmonDantes1">GitHub</a></li>
+            </ul>
+        </div>
+
+        <div class="about-me">
+            <h2 class="head-text">About Me</h2>
+            <p class="text-other">Discovering a profession for myself Frontend Developer.</p>
+        </div>
+
+        <div class="skills">
+            <h2 class="head-text">Skills</h2>
+            <ul class="list-skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript (Basic)</li>
+                <li>Git (Basic)</li>
+            </ul>
+        </div>
+
+        <div class="education">
+            <h2 class="head-text">Education</h2>
+            <ul class="education">
+                <li>University</li>
+                    <li>Technical university in Balashiha, civil engineer</li>
+                    <li>Technical university in Balashiha, economist manager</li>
+                <li>Courses: a great many :-)</li>
+            </ul>
+        </div>
+
+        <div class="english">
+            <h2 class="head-text">English</h2>
+            <p>A2 (I am actively learning)</p>
+        </div>
+    </main>
+
+    <footer>
+        <div class="github">
+            <a href="https://github.com/EdmonDantes1">GitHub</a>
+        </div>
+
+        <div class="img-school">
+            <a href="https://rs.school/js/">
+                <img src="https://rs.school/images/rs_school_js.svg" alt="image" class="image-school">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
